# Claude-code-autonomous-research-setup

./: .gitignore  CLAUDE.md  README.md  how_to  pyproject.toml
.claude/: settings.local.json
.claude/agents/: critic.md  developer.md  ideation.md  literature.md  verify-math.md
demo/: aleksblago_demo.md  sota_research_summary.md
docs/: agentic_academic_research.md  observability_tools.md
docs/ADR/: 001-observability-tool-selection.md
notes/: active_criticism.md  edit_history.md
src/scripts/: arxiv_download.py  gemini_check.sh
