[project]
name = "research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
